# minivpn

./: .gitignore  Cargo.toml  README.md  client.py  config.toml  server.py
.prototypes/others/: client.rs
client/: Cargo.toml
client/src/: main.rs
examples/client/: main.rs
examples/ip_in_udp/: main.rs
examples/ip_router/: main.rs  server.py
examples/others/: server.rs
examples/tcp_handshake/: main.rs
examples/udp_echo/: main.rs
examples/udp_router/: client.py  server.py
prototypes/ip_in_udp/: main.rs
prototypes/udp_router/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: client.rs  main.rs  server.rs
src/client/: connect.rs  data.rs  io.rs  loader.rs  mod.rs
src/generation/: mod.rs
src/server/: auther.rs  entities.rs  mod.rs  server.rs
src/server/auther/: mod.rs
src/server/router/: mod.rs  worker.rs
src/server/switch/: mod.rs  worker.rs
