[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tun = { version = "0.6.1", features = ["async"] }
packet = "0.1.4"
toml = "0.7.6"
serde = {version="1.0.188", features=["derive"]}
log = "0.4.20"
env_logger = "0.10.0"
uuid = "1.4.1"
bincode = "1.3.3"
daemonize = "0.5.0"
clap = "4.4.7"
ipnet = { version = "2.9.0", features = ["serde"] }
futures = "0.3.29"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tokio-stream = "0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
