[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tun = "0.5.5"
packet = "0.1.4"
toml = "0.7.6"
serde = {version="1.0.188", features=["derive"]}
log = "0.4.20"
env_logger = "0.10.0"
uuid = "1.4.1"
bincode = "1.3.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
